# clipper

./: .gitignore  Cargo.toml  build.rs  index.html  pnpm-lock.yaml  tauri.conf.json
.github/workflows/: rust.yml
src/: config.rs  main.rs  util.rs
src/capture/: audio.rs  framepool.rs  mod.rs  muxer.rs  replay.rs  video.rs
src/capture/linux/: audio.rs  video.rs
src/capture/windows/: audio.rs  video.rs
web/: App.tsx
