[package]
name = "clipper"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty_ffmpeg = { version = "0.16.3", features = ["link_system_ffmpeg"] }
anyhow = "1.0.98"
directories = "6.0.0"
parking_lot = "0.12.4"
rdev = "0.5.3"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
crossbeam = "0.8.4"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }


[target.'cfg(windows)'.dependencies]
rusty_ffmpeg = { version = "0.16.3", features = ["link_vcpkg_ffmpeg"] }
windows-result = "0.3.4"
windows = { version = "0.61.3", features = [
	# audio
	"Win32_Devices_FunctionDiscovery",
	"Win32_Media_Audio",
	"Win32_System_Com",
	"Win32_System_Threading",
	"Win32_Security",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_UI_Shell_PropertiesSystem",

	# video
	"Graphics_Capture",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Graphics_DirectX_Direct3D11",
	"Win32_System_WinRT_Direct3D11",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
] }
